# CapsHotkey

./: .clang-format  .editorconfig  .gitignore  AppAutoRun.hpp  CMakeLists.txt  CapsHotkey.hpp  CapsHotkeyApp.hpp  HkeyUser.hpp  KeyCodes.h  MainWindow.hpp  MainWindowImguiDx11.hpp  MainWindowImguiDx9.hpp  MainWindowW32Wrap.hpp  MainWindowWtl.hpp  README.md  logo.rc  main.cpp  resource.h  tray.h
res/: app.aps  app.rc  default.cfg  resource.h
